# jp-autosub

./: .gitignore  COLAB_NOTEBOOK.md  batch_process.bat  batch_process.ps1  batch_process.sh  pyproject.toml  subtitles.srt
src/: app.py  subtitles.py  transcription.py  utils.py  video.py  video_process.py
